toolchain/internal/core/analysis/testdata/errors/naming/type_not_pascal.vdl
// fmt:off
// @expect: E101

type user {
  id string
}
